--- a/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/src/app/recipes/recipes-list/recipes-list.component.html
@@ -6,6 +6,9 @@
 <hr>
 <div class="row">
   <div class="col-xs-12">
-    <app-recipes-item *ngFor="let recipeEl of recipes" [recipe]="recipeEl"></app-recipes-item>
+    <app-recipes-item 
+    *ngFor="let recipeEl of recipes" 
+    [recipe]="recipeEl"
+    (recipeSelected)="onRecipeSelected(recipeEl)"></app-recipes-item>
   </div>
 </div>
