--- a/src/app/recipes/recipes-detail/recipes-detail.component.html
+++ b/src/app/recipes/recipes-detail/recipes-detail.component.html
@@ -20,7 +20,7 @@
         Manage Recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="#">Add Ingredients to Shooping List</a></li>
+        <li><a href="#" (click)="onAddToShoppingList()" style="cursor: pointer">Add Ingredients to Shooping List</a></li>
         <li><a href="#">Edit Recipe</a></li>
         <li><a href="#">Delete Recipe</a></li>
       </ul>
@@ -35,6 +35,10 @@
 
 <div class="row">
     <div class="col-xs-12">
-      Ingredients
+      <ul class="list-group">
+        <li class="list-group-item"
+        *ngFor="let ingredient of recipe.ingredients">
+        {{ingredient.name}}-{{ingredient.amount}}</li>
+      </ul>
     </div>
 </div>
