--- a/src/app/recipes/recipes-list/recipes-item/recipes-item.component.html
+++ b/src/app/recipes/recipes-list/recipes-item/recipes-item.component.html
@@ -1,6 +1,6 @@
 <a class="list-group-item clearfix"
-style="cursor: pointer"
-  (click)="onSelected()"  
+style="cursor: pointer" 
+[routerLink]="[id]"
 >
       <div class="pull-left">
           <h4 class="list-group-item-heading">{{recipe.name}}</h4>
