--- a/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/src/app/recipes/recipes-list/recipes-list.component.html
@@ -7,7 +7,8 @@
 <div class="row">
   <div class="col-xs-12">
     <app-recipes-item 
-    *ngFor="let recipeEl of recipes" 
-    [recipe]="recipeEl"></app-recipes-item>
+    *ngFor="let recipeEl of recipes; let i = index" 
+    [recipe]="recipeEl"
+    [id] = "i"></app-recipes-item>
   </div>
 </div>
