--- a/src/app/recipes/recipes-detail/recipes-detail.component.html
+++ b/src/app/recipes/recipes-detail/recipes-detail.component.html
@@ -21,7 +21,7 @@
       </button>
       <ul class="dropdown-menu">
         <li><a (click)="onAddToShoppingList()" style="cursor: pointer">Add Ingredients to Shooping List</a></li>
-        <li><a (click)="onEditRecipe()">Edit Recipe</a></li>
+        <li><a (click)="onEditRecipe()" style="cursor: pointer">Edit Recipe</a></li>
         <li><a>Delete Recipe</a></li>
       </ul>
   </div>
