--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -4,7 +4,8 @@
 
       <div class="row">
         <div class="col-xs-12">
-          <button type="submit" class="btn btn-success">Save</button>
+          <button type="submit" class="btn btn-success"
+          [disabled]="!recipeForm.valid">Save</button>
           <button type="button" class="btn btn-danger">Cancel</button>
         </div>
       </div>
@@ -62,7 +63,7 @@
           <div class="col-xs-12" formArrayName="ingredients">      
             <div class="row" 
               *ngFor="let ingredientCtrl of recipeForm.get('ingredients').controls; let i = index " 
-              [formGroupName]="i">
+              [formGroupName]="i" style="margin-top: 10px">
               <div class="col-xs-8">
                 <input type="text" class="form-control"
                 formControlName="name">
@@ -73,12 +74,17 @@
               </div>
               <div class="col-xs-2">
                   <button class="btn btn-danger">X</button>
-              </div>
-            
+              </div>   
             </div>
-
+            <hr>
+            <div class="row">
+              <div class="col-xs-12">
+                <button class="btn btn-success" (click)="onAddIngredient()">Add Ingredient</button>
+              </div>
+            </div>
           </div>
       </div>
+
 
     </form>
   </div>
