--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -6,7 +6,7 @@
         <div class="col-xs-12">
           <button type="submit" class="btn btn-success"
           [disabled]="!recipeForm.valid">Save</button>
-          <button type="button" class="btn btn-danger">Cancel</button>
+          <button type="button" class="btn btn-danger"(click)="onCancel()">Cancel</button>
         </div>
       </div>
 
@@ -15,7 +15,7 @@
           <div class="form-group">
             <label for="name">Name</label>
             <input 
-              type="text"
+              type="text" 
               id="name"
               class="form-control"
               formControlName="name"
