--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -33,6 +33,7 @@
                 name="imagePath"
                 class="form-control"
                 formControlName="imagePath"
+                #imagePath
               >
             </div>
           </div>
@@ -40,7 +41,7 @@
 
       <div class="row">
           <div class="col-xs-12">
-            <img src="" class="img-responsive">
+            <img [src]="imagePath.value" class="img-responsive">
           </div>
       </div>
 
