--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -73,7 +73,7 @@
                   <input type="number" class="form-control"
                   formControlName="amount">
               </div>
-              <div class="col-xs-2">
+              <div class="col-xs-2" type="button" (click)="onDeleteIngredient(i)">
                   <button class="btn btn-danger">X</button>
               </div>   
             </div>
