--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,6 +11,7 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
+        <li><a routerLink="/signup">Sign UP</a></li>
         <li class="dropdown" appDropdown>
           <a  style="cursor: pointer" class="dropdown-toggle" role=""button>Manage <span class="caret"></span></a>
           <ul class="dropdown-menu">
