--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,9 +11,11 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li><a routerLink="/signup">Sign Up</a></li>
-        <li><a routerLink="/signin">Log In</a></li>
-        <li class="dropdown" appDropdown>
+        <ng-template [ngIf]="!authService.isAuthenticated()">
+            <li><a routerLink="/signup">Sign Up</a></li>
+            <li><a routerLink="/signin">Log In</a></li>
+        </ng-template>        
+        <li class="dropdown" appDropdown *ngIf="authService.isAuthenticated()">
           <a  style="cursor: pointer" class="dropdown-toggle" role=""button>Manage <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a style="cursor: pointer" (click)="onSaveData()">Save Data</a></li>
