add log out and router guard

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,6 +15,8 @@
             <li><a routerLink="/signup">Sign Up</a></li>
             <li><a routerLink="/signin">Log In</a></li>
         </ng-template>        
+        <li><a style="cursor: pointer;" 
+          (click)="onLogout()" *ngIf="authService.isAuthenticated()">Logout</a></li>
         <li class="dropdown" appDropdown *ngIf="authService.isAuthenticated()">
           <a  style="cursor: pointer" class="dropdown-toggle" role=""button>Manage <span class="caret"></span></a>
           <ul class="dropdown-menu">
